--- a/rtube/templates/video-player.html
+++ b/rtube/templates/video-player.html
@@ -2,30 +2,11 @@
 <html lang="en">
 <head>
     <link href="{{ url_for('static', filename='node_modules/video.js/dist/video-js.css')}}" rel="stylesheet" />
-
-    <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-    <!-- <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script> -->
 </head>
 <body>
 
-<!--    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">-->
-
-<!--    <ul id="myUL">-->
-<!--        <li><a href="#">Adele</a></li>-->
-<!--        <li><a href="#">Agnes</a></li>-->
-
-<!--        <li><a href="#">Billy</a></li>-->
-<!--        <li><a href="#">Bob</a></li>-->
-
-<!--        <li><a href="#">Calvin</a></li>-->
-<!--        <li><a href="#">Christina</a></li>-->
-<!--        <li><a href="#">Cindy</a></li>-->
-<!--    </ul>-->
-<!--    <script src="search.js"></script>-->
-
 <video id="RPlayer"  class="video-js"  preload="auto"  data-setup="{}" width="640" height="268">
-    <source src="{{ url_for('static', filename='videos/hls.m3u8')}}" type="application/x-mpegURL">
-    <!--        <source src="{{ url_for('static', filename='Gameplay.mp4')}}" type="video/mp4">-->
+    <source src="{{ url_for('static', filename=video_filename)}}" type="application/x-mpegURL">
         Your browser doesn't support video tag.
 </video>
 
