Edit comments, in-memory db for testing, 404

--- a/rtube/templates/encoding/jobs.html
+++ b/rtube/templates/encoding/jobs.html
@@ -124,7 +124,7 @@
             <h1>Encoding Jobs</h1>
             <div class="nav-links">
                 <a href="/" class="btn btn-secondary">Videos</a>
-                <a href="/encode" class="btn btn-primary">+ Encode a video</a>
+                <a href="/encode" class="btn btn-primary">Encode a video</a>
             </div>
         </div>
 
