--- a/rtube/templates/encoding/jobs.html
+++ b/rtube/templates/encoding/jobs.html
@@ -110,11 +110,11 @@
                 text-align: center;
                 padding: 40px;
             }
-            a.job-link {
+            a.job-link, a.profile-link {
                 color: #4CAF50;
                 text-decoration: none;
             }
-            a.job-link:hover {
+            a.job-link:hover, a.profile-link:hover {
                 text-decoration: underline;
             }
         </style>
@@ -136,6 +136,7 @@
                     <th>Status</th>
                     <th>Progress</th>
                     <th>Qualities</th>
+                    <th>Started by</th>
                     <th>Created</th>
                 </tr>
             </thead>
@@ -160,6 +161,13 @@
                         {% for quality in job.qualities.split(',') %}
                         <span class="quality-badge">{{ quality }}</span>
                         {% endfor %}
+                    </td>
+                    <td>
+                        {% if job.started_by_username %}
+                        <a href="{{ url_for('auth.user_profile', username=job.started_by_username) }}" class="profile-link">{{ job.started_by_username }}</a>
+                        {% else %}
+                        -
+                        {% endif %}
                     </td>
                     <td>{{ job.created_at.strftime('%Y-%m-%d %H:%M') }}</td>
                 </tr>
